{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 8278,
  "lineage": "3d246fc3-cb2a-c253-13db-21179c8e1314",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/94102108-TFT-ALB/0256985bbe7cf796",
            "arn_suffix": "app/94102108-TFT-ALB/0256985bbe7cf796",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "94102108-TFT-ALB-414491906.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/94102108-TFT-ALB/0256985bbe7cf796",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "94102108-TFT-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-006052150afc3994e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035d10b2e79af0179"
              },
              {
                "subnet_id": "subnet-036e5041edcc6ee75"
              }
            ],
            "subnets": [
              "subnet-035d10b2e79af0179",
              "subnet-036e5041edcc6ee75"
            ],
            "tags": {
              "Manageby": "Terraform"
            },
            "tags_all": {
              "Manageby": "Terraform"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.ALB",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/app/94102108-TFT-ALB/0256985bbe7cf796/61461bc5296e4ef9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found/n",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/app/94102108-TFT-ALB/0256985bbe7cf796/61461bc5296e4ef9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/94102108-TFT-ALB/0256985bbe7cf796",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.security_groups.aws_security_group.ALB",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/app/94102108-TFT-ALB/0256985bbe7cf796/dea8cc38b2b3c21d",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:637423403127:certificate/8e1b4125-ba4a-4752-8513-c1e21e1415e9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/app/94102108-TFT-ALB/0256985bbe7cf796/dea8cc38b2b3c21d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/94102108-TFT-ALB/0256985bbe7cf796",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.atg",
            "module.alb.data.aws_acm_certificate.acm",
            "module.security_groups.aws_security_group.ALB",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener-rule/app/94102108-TFT-ALB/0256985bbe7cf796/61461bc5296e4ef9/dff9172c37c06b5c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener-rule/app/94102108-TFT-ALB/0256985bbe7cf796/61461bc5296e4ef9/dff9172c37c06b5c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/app/94102108-TFT-ALB/0256985bbe7cf796/61461bc5296e4ef9",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_listener.alb",
            "module.alb.aws_lb_target_group.atg",
            "module.security_groups.aws_security_group.ALB",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "atg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8",
            "arn_suffix": "targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8",
            "deregistration_delay": "0",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/94102108-TFT-ALB/0256985bbe7cf796"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "94102108-TFT-ALB",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tft1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8-2024101501430618870000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8",
            "target_id": "i-0bcb3501d1595a36f"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.atg",
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance1.aws_instance.this",
            "module.ec2.module.ec2_instance1.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance2.aws_instance.this",
            "module.ec2.module.ec2_instance2.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tft2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8-2024101501430623950000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-ALB/42cb78cc3bc8c5a8",
            "target_id": "i-0dc2b8b8ee646623a"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.atg",
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance1.aws_instance.this",
            "module.ec2.module.ec2_instance1.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance2.aws_instance.this",
            "module.ec2.module.ec2_instance2.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ff737803101edd1",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-0b022bab952af29f9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b022bab952af29f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ef28e47d5735dbc",
            "private_dns": "ip-10-10-1-85.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.85",
            "public_dns": "ec2-43-203-223-5.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.223.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e075a89750750bf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036e5041edcc6ee75",
            "tags": {
              "Manageby": "Terraform",
              "Name": "Bastion"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "Bastion"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "Bastion"
            },
            "vpc_security_group_ids": [
              "sg-030f6bf64fdc0c085"
            ]
          },
          "dependencies": [
            "module.ec2.module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance.aws_iam_role.this",
            "module.ec2.module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance.data.aws_partition.current",
            "module.ec2.module.ec2_instance.data.aws_ssm_parameter.this",
            "module.security_groups.aws_security_group.Bastion",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ff737803101edd1",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-0bcb3501d1595a36f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bcb3501d1595a36f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0eedc501196a149",
            "private_dns": "ip-10-10-3-46.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-016188eb4ac8b46d4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ed07bf25517bfeb",
            "tags": {
              "Manageby": "Terraform",
              "Name": "WEB1"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "WEB1"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "WEB1"
            },
            "vpc_security_group_ids": [
              "sg-01eb761c44009c011"
            ]
          },
          "dependencies": [
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ff737803101edd1",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-0dc2b8b8ee646623a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc2b8b8ee646623a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002777703dfa0ad4d",
            "private_dns": "ip-10-10-4-176.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.4.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d6599df4c103f212",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f323302034529621",
            "tags": {
              "Manageby": "Terraform",
              "Name": "WEB2"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "WEB2"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "WEB2"
            },
            "vpc_security_group_ids": [
              "sg-01eb761c44009c011"
            ]
          },
          "dependencies": [
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance3",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ff737803101edd1",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-05b2026bd5a54baea",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b2026bd5a54baea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bc1eaee28ee0661c",
            "private_dns": "ip-10-10-5-228.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.5.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a4b4c9297a279f78",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9cf2a8cae6c1403",
            "tags": {
              "Manageby": "Terraform",
              "Name": "WAS1"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "WAS1"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "WAS1"
            },
            "vpc_security_group_ids": [
              "sg-0e583dbbe3f37bc87"
            ]
          },
          "dependencies": [
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance1.aws_instance.this",
            "module.ec2.module.ec2_instance1.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance2.aws_instance.this",
            "module.ec2.module.ec2_instance2.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance3.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance3.aws_iam_role.this",
            "module.ec2.module.ec2_instance3.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance3.data.aws_partition.current",
            "module.ec2.module.ec2_instance3.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WAS",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.ec2_instance4",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ff737803101edd1",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-0c3686cd252b002f9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3686cd252b002f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tt",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ab227ff7ed162f86",
            "private_dns": "ip-10-10-6-81.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.6.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7878a12d74ec0b3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7a7f2dcc17ce212",
            "tags": {
              "Manageby": "Terraform",
              "Name": "WAS2"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "WAS2"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "WAS2"
            },
            "vpc_security_group_ids": [
              "sg-0e583dbbe3f37bc87"
            ]
          },
          "dependencies": [
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance1.aws_instance.this",
            "module.ec2.module.ec2_instance1.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance2.aws_instance.this",
            "module.ec2.module.ec2_instance2.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance4.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance4.aws_iam_role.this",
            "module.ec2.module.ec2_instance4.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance4.data.aws_partition.current",
            "module.ec2.module.ec2_instance4.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WAS",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/net/94102108-TFT-NLB/4d198a4efeaf5b98",
            "arn_suffix": "net/94102108-TFT-NLB/4d198a4efeaf5b98",
            "dns_name": "94102108-TFT-NLB-4d198a4efeaf5b98.elb.ap-northeast-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/net/94102108-TFT-NLB/4d198a4efeaf5b98",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "94102108-TFT-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ed07bf25517bfeb"
              },
              {
                "subnet_id": "subnet-0f323302034529621"
              }
            ],
            "subnets": [
              "subnet-07ed07bf25517bfeb",
              "subnet-0f323302034529621"
            ],
            "tags": {
              "Name": "94102108-TFT-NLB"
            },
            "tags_all": {
              "Name": "94102108-TFT-NLB"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/net/94102108-TFT-NLB/4d198a4efeaf5b98/3b9306d8cbdd8d79",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-NLB/4c3ef04d65f46508",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/net/94102108-TFT-NLB/4d198a4efeaf5b98/3b9306d8cbdd8d79",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/net/94102108-TFT-NLB/4d198a4efeaf5b98",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_lb.nlb",
            "module.nlb.aws_lb_target_group.ntg",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ntg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-NLB/4c3ef04d65f46508",
            "arn_suffix": "targetgroup/94102108-TFT-NLB/4c3ef04d65f46508",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-NLB/4c3ef04d65f46508",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/net/94102108-TFT-NLB/4d198a4efeaf5b98"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "94102108-TFT-NLB",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tft3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-NLB/4c3ef04d65f46508-2024101501432151520000000e",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-NLB/4c3ef04d65f46508",
            "target_id": "i-05b2026bd5a54baea"
          },
          "dependencies": [
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance1.aws_instance.this",
            "module.ec2.module.ec2_instance1.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance2.aws_instance.this",
            "module.ec2.module.ec2_instance2.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance3.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance3.aws_iam_role.this",
            "module.ec2.module.ec2_instance3.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance3.aws_instance.this",
            "module.ec2.module.ec2_instance3.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance3.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance3.data.aws_partition.current",
            "module.ec2.module.ec2_instance3.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance4.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance4.aws_iam_role.this",
            "module.ec2.module.ec2_instance4.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance4.aws_instance.this",
            "module.ec2.module.ec2_instance4.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance4.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance4.data.aws_partition.current",
            "module.ec2.module.ec2_instance4.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.nlb.aws_lb_target_group.ntg",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WAS",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tft4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-NLB/4c3ef04d65f46508-2024101501432157080000000f",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/94102108-TFT-NLB/4c3ef04d65f46508",
            "target_id": "i-0c3686cd252b002f9"
          },
          "dependencies": [
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance1.aws_instance.this",
            "module.ec2.module.ec2_instance1.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance2.aws_instance.this",
            "module.ec2.module.ec2_instance2.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance3.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance3.aws_iam_role.this",
            "module.ec2.module.ec2_instance3.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance3.aws_instance.this",
            "module.ec2.module.ec2_instance3.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance3.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance3.data.aws_partition.current",
            "module.ec2.module.ec2_instance3.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance4.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance4.aws_iam_role.this",
            "module.ec2.module.ec2_instance4.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance4.aws_instance.this",
            "module.ec2.module.ec2_instance4.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance4.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance4.data.aws_partition.current",
            "module.ec2.module.ec2_instance4.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.nlb.aws_lb_target_group.ntg",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WAS",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-006052150afc3994e",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006052150afc3994e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "94102108-laC-TFT-ALB",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Manageby": "Terraform"
            },
            "tags_all": {
              "Manageby": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-030f6bf64fdc0c085",
            "description": "Security Group for Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030f6bf64fdc0c085",
            "ingress": [
              {
                "cidr_blocks": [
                  "165.243.5.20/32",
                  "27.122.140.10/32"
                ],
                "description": "Allow access from Cloud",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "94102108-laC-TFT-Bastion",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Manageby": "Terraform"
            },
            "tags_all": {
              "Manageby": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-0fb00c20080e54d32",
            "description": "Security Group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb00c20080e54d32",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from WAS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e583dbbe3f37bc87"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "94102108-laC-TFT-RDS",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Manageby": "Terraform"
            },
            "tags_all": {
              "Manageby": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance1.aws_instance.this",
            "module.ec2.module.ec2_instance1.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance2.aws_instance.this",
            "module.ec2.module.ec2_instance2.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WAS",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WAS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-0e583dbbe3f37bc87",
            "description": "Security Group for WAS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e583dbbe3f37bc87",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.3.46/32",
                  "10.10.4.176/32"
                ],
                "description": "ssh from Bastion",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "ssh from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030f6bf64fdc0c085"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "94102108-laC-TFT-WAS",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Manageby": "Terraform"
            },
            "tags_all": {
              "Manageby": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.ec2_instance1.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance1.aws_iam_role.this",
            "module.ec2.module.ec2_instance1.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance1.aws_instance.this",
            "module.ec2.module.ec2_instance1.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance1.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance1.data.aws_partition.current",
            "module.ec2.module.ec2_instance1.data.aws_ssm_parameter.this",
            "module.ec2.module.ec2_instance2.aws_iam_instance_profile.this",
            "module.ec2.module.ec2_instance2.aws_iam_role.this",
            "module.ec2.module.ec2_instance2.aws_instance.ignore_ami",
            "module.ec2.module.ec2_instance2.aws_instance.this",
            "module.ec2.module.ec2_instance2.aws_spot_instance_request.this",
            "module.ec2.module.ec2_instance2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.module.ec2_instance2.data.aws_partition.current",
            "module.ec2.module.ec2_instance2.data.aws_ssm_parameter.this",
            "module.nlb.aws_lb.nlb",
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.security_groups.aws_security_group.WEB",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-01eb761c44009c011",
            "description": "Security Group for WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01eb761c44009c011",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006052150afc3994e"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030f6bf64fdc0c085"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "94102108-laC-TFT-WEB",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Manageby": "Terraform"
            },
            "tags_all": {
              "Manageby": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.ALB",
            "module.security_groups.aws_security_group.Bastion",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:network-acl/acl-0809780ff00364e0d",
            "default_network_acl_id": "acl-0809780ff00364e0d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0809780ff00364e0d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "637423403127",
            "subnet_ids": [
              "subnet-035d10b2e79af0179",
              "subnet-036e5041edcc6ee75",
              "subnet-060adb41077a7ce7c",
              "subnet-07ed07bf25517bfeb",
              "subnet-0a7a7f2dcc17ce212",
              "subnet-0a9cf2a8cae6c1403",
              "subnet-0d543fd2d68a14e9c",
              "subnet-0f323302034529621"
            ],
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-default"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-default"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:route-table/rtb-0a0591be13d5015a2",
            "default_route_table_id": "rtb-0a0591be13d5015a2",
            "id": "rtb-0a0591be13d5015a2",
            "owner_id": "637423403127",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-default"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-07758fa12576141c8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07758fa12576141c8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-default"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-default"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008d42e636067bc8d",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:elastic-ip/eipalloc-008d42e636067bc8d",
            "association_id": "eipassoc-0d8ecc9715fdfda12",
            "domain": "vpc",
            "id": "eipalloc-008d42e636067bc8d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-02211bb310f923752",
            "private_dns": "ip-10-10-1-93.ap-northeast-2.compute.internal",
            "private_ip": "10.10.1.93",
            "public_dns": "ec2-3-37-117-244.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.117.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-ap-northeast-2a"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-ap-northeast-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:internet-gateway/igw-0df1e8819a72ec784",
            "id": "igw-0df1e8819a72ec784",
            "owner_id": "637423403127",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008d42e636067bc8d",
            "association_id": "eipassoc-0d8ecc9715fdfda12",
            "connectivity_type": "public",
            "id": "nat-0deb4755959f55b5e",
            "network_interface_id": "eni-02211bb310f923752",
            "private_ip": "10.10.1.93",
            "public_ip": "3.37.117.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036e5041edcc6ee75",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-ap-northeast-2a"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-ap-northeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cada4eda836049331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0deb4755959f55b5e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cada4eda83604933",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df1e8819a72ec784",
            "id": "r-rtb-014c0ac4080d06dc91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014c0ac4080d06dc9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:route-table/rtb-0cada4eda83604933",
            "id": "rtb-0cada4eda83604933",
            "owner_id": "637423403127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0deb4755959f55b5e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:route-table/rtb-014c0ac4080d06dc9",
            "id": "rtb-014c0ac4080d06dc9",
            "owner_id": "637423403127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df1e8819a72ec784",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-public"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c7b6445d136d211",
            "route_table_id": "rtb-0cada4eda83604933",
            "subnet_id": "subnet-07ed07bf25517bfeb"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c41bbdfe0c995f7",
            "route_table_id": "rtb-0cada4eda83604933",
            "subnet_id": "subnet-0f323302034529621"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028432c9841e6217b",
            "route_table_id": "rtb-0cada4eda83604933",
            "subnet_id": "subnet-0a9cf2a8cae6c1403"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0359ab38a2d7d1468",
            "route_table_id": "rtb-0cada4eda83604933",
            "subnet_id": "subnet-0a7a7f2dcc17ce212"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071fbfd8b9965ce08",
            "route_table_id": "rtb-0cada4eda83604933",
            "subnet_id": "subnet-0d543fd2d68a14e9c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e011da8675976bc3",
            "route_table_id": "rtb-0cada4eda83604933",
            "subnet_id": "subnet-060adb41077a7ce7c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db01f3a1749775a7",
            "route_table_id": "rtb-014c0ac4080d06dc9",
            "subnet_id": "subnet-036e5041edcc6ee75"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb3ef282a212730d",
            "route_table_id": "rtb-014c0ac4080d06dc9",
            "subnet_id": "subnet-035d10b2e79af0179"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-07ed07bf25517bfeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ed07bf25517bfeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2a"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2a"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0f323302034529621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f323302034529621",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2c"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2c"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0a9cf2a8cae6c1403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9cf2a8cae6c1403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2a"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2a"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0a7a7f2dcc17ce212",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7a7f2dcc17ce212",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2c"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2c"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0d543fd2d68a14e9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d543fd2d68a14e9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2a"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2a"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-060adb41077a7ce7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060adb41077a7ce7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2c"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-private-ap-northeast-2c"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-036e5041edcc6ee75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036e5041edcc6ee75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-public-ap-northeast-2a"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-public-ap-northeast-2a"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-035d10b2e79af0179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035d10b2e79af0179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-public-ap-northeast-2c"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT-public-ap-northeast-2c"
            },
            "vpc_id": "vpc-09a0ec0b1d5860f93"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:vpc/vpc-09a0ec0b1d5860f93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/20",
            "default_network_acl_id": "acl-0809780ff00364e0d",
            "default_route_table_id": "rtb-0a0591be13d5015a2",
            "default_security_group_id": "sg-07758fa12576141c8",
            "dhcp_options_id": "dopt-09bc5c4d3ccca2488",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a0ec0b1d5860f93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0591be13d5015a2",
            "owner_id": "637423403127",
            "tags": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT"
            },
            "tags_all": {
              "Manageby": "Terraform",
              "Name": "94102108-TFT"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}